tests/snapshots/test_runner__tests__compiler__typecheck__import_3__import_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// importing non-existing name
import "../import_1" { bar }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/import_3/import_3.kk:2:24
  │
2 │ import "../import_1" { bar }
  │                        ^^^ Unknown Name
  │
  = This name cannot be found in the imported file.
